# oneDPL

./: .gitignore  AGENTS.md  CHANGES.html  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  IMPLEMENTATION_DETAILS.md  README.md  api_for_sycl_kernels_main.html  cmake_support.html  dynamic_selection_api_main.html  genindex.html  index.html  introduction.html  kernel_templates_main.html  macros.html  notices_disclaimers.html  objects.inv  oneDPL_2022.0_changes.html  onedpl_gsg.html  parallel_api_main.html  philox_productization.md  pr_2721_description.md  release_notes.html  reproducer_sort_spill.cpp  search.html  searchindex.js  sycl_scan_reproducer.cpp  sycl_scan_simple_test.cpp
.github/: copilot-instructions.md
.github/scripts/: allowed_words.txt  clang-format-diff.sh  codespell.sh  job_summary.py
.github/workflows/: ci-docs.yml  ci-testing.yml  clang-format-apply.yml  scorecard.yml  slack-pr.yaml
_sources/: introduction.rst
_sources/introduction/: onedpl_gsg.rst
_sources/library_guide/: introduction.rst  kernel_templates_main.rst  macros.rst  overview.rst  parallel_api_main.rst
_sources/parallel_api/: parallel_range_algorithms.rst
_sources/specification/: index.rst
_static/: documentation_options.js
api_for_sycl_kernels/: random.html  tested_standard_cpp_api.html  utility_function_object_classes.html
cmake/: README.md
docs/: bounded_set_op_hetero_design.md
documentation/: .gitignore  Makefile  conf.py  index.rst  release_notes.rst
documentation/_auxiliary/: common_cross_document_links.txt  requirements.txt  variables.txt
documentation/_templates/: layout.html
documentation/get_started/: onedpl_gsg.rst
documentation/internal/: development_guide.md  test_infrastructure.md
documentation/library_guide/: common_cross_document_links.txt  conf.py  dynamic_selection_api_main.rst  guide_toc.rst  index.rst  introduction.rst  macros.rst  oneDPL_2022.0_changes.rst  onedpl_gsg.rst  overview.rst  overview_toc.rst
documentation/specification/: LICENSE.rst  common.rst  index.rst  spec_versions.rst  sycl_kernels_api.rst
dynamic_selection_api/: auto_tune_policy.html  dynamic_load_policy.html  fixed_resource_policy.html  functions.html  policies.html  round_robin_policy.html
examples/convex_hull/: CMakeLists.txt
examples/dot_product/: CMakeLists.txt
examples/dynamic_selection/: CMakeLists.txt
examples/dynamic_selection/nstream/: CMakeLists.txt  README.md
examples/dynamic_selection/nstream/src/: 1_nstreams_sycl.cpp  2_nstreams_policies.cpp  nstreams_policies.cpp  nstreams_sycl.cpp
examples/dynamic_selection/sepia-filter-ds/: CMakeLists.txt  README.md
examples/dynamic_selection/sepia-filter-ds/src/: 1_sepia_sycl.cpp  2_sepia_policies.cpp  sepia_policies.cpp  sepia_sycl.cpp
examples/gamma_correction/: CMakeLists.txt
examples/histogram/: CMakeLists.txt
examples/histogram/src/: CMakeLists.txt  main.cpp
examples/maxloc_reductions/: CMakeLists.txt  README.md  makefile  maxloc_buffered.cpp  maxloc_implicit.cpp  maxloc_operator.cpp  maxloc_usm.cpp
examples/pSTL_offload/: CMakeLists.txt  README.md  third-party-programs.txt
examples/pSTL_offload/FileWordCount/: CMakeLists.txt  main.cpp
examples/pSTL_offload/FileWordCount/GutenbergBooks/: 12376-8.txt
examples/pSTL_offload/ParSTLTests/: CMakeLists.txt  main.cpp
examples/pSTL_offload/WordCount/: CMakeLists.txt  main.cpp
examples/random/: CMakeLists.txt
examples/random/src/: CMakeLists.txt
examples/stable_sort_by_key/: CMakeLists.txt
examples/stable_sort_by_key/src/: CMakeLists.txt
get_started/: onedpl_gsg.html  release_notes.html
integration/env/: vars.bat  vars.sh
integration/etc/: vars.bat  vars.sh
integration/modulefiles/: dpl
introduction/: onedpl_gsg.html  release_notes.html
kernel_templates/: esimd_main.html  kernel_configuration.html  single_pass_scan.html
kernel_templates/esimd/: radix_sort.html  radix_sort_by_key.html
library_guide/: api_for_sycl_kernels_main.html  cmake_support.html  dynamic_selection_api_main.html  guide_toc.html  index.html  introduction.html  kernel_templates_main.html  macros.html  oneDPL_2022.0_changes.html  overview.html  parallel_api_main.html
library_guide/api_for_sycl_kernels/: random.html  tested_standard_cpp_api.html  utility_function_object_classes.html
library_guide/dynamic_selection_api/: auto_tune_policy.html  backends.html  custom_policies.html  dynamic_load_policy.html  fixed_resource_policy.html  functions.html  policies.html  round_robin_policy.html
library_guide/kernel_templates/: esimd_main.html  kernel_configuration.html  sycl_main.html
library_guide/parallel_api/: additional_algorithms.html  async_api.html  execution_policies.html  iterators.html  parallel_range_algorithms.html  pass_data_algorithms.html  range_based_api.html
make/: header_inclusion_order_algorithm_0.pass.ilk  zip_view.eq.pass.ilk  zip_view.minus.pass.ilk
parallel_api/: additional_algorithms.html  async_api.html  execution_policies.html  iterators.html  parallel_range_algorithms.html  pass_data_algorithms.html  range_based_api.html
rfcs/experimental/: radix_sort_esimd_sycl.md
specification/: LICENSE.html  common.html  index.html  parallel_api.html  spec_versions.html  sycl_kernels_api.html
specification/parallel_api/: algorithms.html  buffer_wrappers.html  execution_policies.html  iterators.html  parallel_range_api.html
support_file_diffs/: double_move_tracker.h.diff  test_iterators.h.diff  test_macros.h.diff  types.h.diff  zip_view_impl.h.diff
test/: CMakeLists.txt  sycl_usm_tbb_reproducer.cpp  usm_shared_reproducer.cpp
test/general/: buffer_wrapper.pass.cpp  dpl_namespace.pass.cpp  header_inclusion_order_algorithm_1.pass.cpp  header_inclusion_order_async_0.pass.cpp  header_inclusion_order_async_1.pass.cpp  header_inclusion_order_memory_0.pass.cpp  header_inclusion_order_memory_1.pass.cpp  header_order_ranges_0.pass.cpp  header_order_ranges_1.pass.cpp  interface_check.pass.cpp  lambda_naming.pass.cpp  test1_reduce.pass.cpp  test2_adjacent_difference.pass.cpp  test_policies.pass.cpp  type_requirements.pass.cpp  version.pass.cpp
(+1115 files in other folders)
